feat(index.html): adicionando menu dos cursos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>Versionamento de Software</title>
 </head>
 <body>
-  
+  <nav>
+    <ul>
+      <li>
+        <a href="semver.html">Versionamento Semantico</a>
+      </li>
+    </ul>
+  </nav>
 </body>
 </html>
