feat(index.html): adicionando repositorios no menu de cursos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <li>
         <a href="semver.html">Versionamento Semantico</a>
       </li>
+      <li>
+        <a href="repositorios.html">Repositorios</a>
+      </li>
     </ul>
   </nav>
 </body>
