fix(menu): link da pagina de repositorios

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <a href="semver.html">Versionamento Semantico</a>
       </li>
       <li>
-        <a href="repositorios.html">Repositorios</a>
+        <a href="repositorios.html">Repositórios</a>
       </li>
     </ul>
   </nav>
 </body>
-</html>
+</html> 
+
