feat(menu): adicionado menu para curso de git

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <li>
         <a href="repositorios.html">Repositórios</a>
       </li>
+      <li>
+        <a href="git.html">Git</a>
+      </li>
     </ul>
   </nav>
 </body>
